# xadc-test

./: CMakeLists.txt
include/: xadc_core.h
src/: main.cpp  xadc_core.cpp
xadc_lib/include/: xadc_core_if.h
xadc_lib/src/: xadc_core.c
